--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@swc/helpers": "^0.5.15",
     "next": "^15.0.3",
+    "react": "^18.3.1",
     "sass": "^1.54.4",
     "swiper": "^11.1.14"
   },
