--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@swc/helpers": "^0.5.15",
     "next": "^15.0.3",
     "react": "^18.3.1",
+    "react-dom": "18.2.0",
     "sass": "^1.54.4",
     "swiper": "^11.1.14"
   },
